# sterile

./: README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  metadata.rs
src/components/: Sidebar.tsx  playerbar.tsx
src/components/Views/: ArtistsView.tsx  LibraryView.tsx  NowPlayinView.tsx  PlaylistsView.tsx
src/hooks/: useAudioEngine.ts
