[package]
name = "sterile"
version = "0.1.0"
description = "sterile"
edition = "2021"

[lib]
name = "sterile_audio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
id3 = "1.17"
walkdir = "2.5"
